log
Fri 14 Apr 2023 01:10:04 AM UTC: 
 tests:  0|6
total_score: 0/70
b827cdd
Fri 14 Apr 2023 01:12:46 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
201af5a
Fri 14 Apr 2023 01:13:59 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
5c21cb2
Fri 14 Apr 2023 01:15:12 AM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
7723428
Fri 14 Apr 2023 01:16:49 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘createMap’:
hashmap.c:56:7: error: ‘*mapa.buckets’ is used uninitialized [-Werror=uninitialized]
   56 |   mapa->buckets[0] = NULL;
      |   ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a7acf93
Fri 14 Apr 2023 01:19:04 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
04ba391
